--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "express": "^4.19.2",
-    "prisma": "^5.17.0"
+    "prisma": "^5.17.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
